--- a/app/index.html
+++ b/app/index.html
@@ -7,15 +7,7 @@
   <body>
     <h1>Mean, Median, and Mode:</h1>
     <div data-ng-app="mmmApp">
-      <div data-ng-controller="mmmCtrl">
-        <form>Input:
-          <input type="text" ng-model="user.input" ng-change="update()"/>
-        </form>
-        </br>
-      <p>Mean: {{output.mean}}</br>
-         Median: {{output.median}}</br>
-         Mode: {{output.mode}}</p>
-      </div>
+      <div data-ng-view>
     </div>
     <script src="bundle.js"></script>
   </body>
